--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,11 @@
+/* GENERAL */
 @import "/styles/base.css";
 @import "/styles/theme.css";
 @import "/styles/utility.css";
+@import "/styles/reset.css";
 
 /* COMPONENTS */
 @import "/styles/components/post.css";
+@import "/styles/components/footer.css";
+@import "/styles/components/header.css";
+@import "/styles/components/main.css";
