--- a/styles/base.css
+++ b/styles/base.css
@@ -6,12 +6,15 @@
 
 body {
   color: var(--color-primary-white);
+  background-color: var(--color-background);
   margin: 0;
+  padding: 0 24px;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   height: 100vh;
   display: grid;
   grid-template-rows: 100px auto 90px;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* Remove default padding */
