Add white circle around pink letter badge

--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -28,5 +28,6 @@
   width: 0.5rem;
   height: 0.5rem;
   border-radius: 50%;
+  border: 1px solid;
   background-color: var(--color-primary-social-pink);
 }
