--- a/styles/utility.css
+++ b/styles/utility.css
@@ -13,3 +13,18 @@
 .text--blue {
   color: var(--color-primary-social-blue);
 }
+
+.px-1rem {
+  padding: 0 1rem;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
