--- a/styles/components/post.css
+++ b/styles/components/post.css
@@ -1,18 +1,17 @@
 .post {
-  border: 1px solid white;
+  border-bottom: 1px solid var(--color-secondary-dark-grey);
+  border-top: 1px solid var(--color-secondary-dark-grey);
   padding: 1rem 1.5rem;
   display: grid;
+  width: 375px;
   grid-template-rows: 34px auto 20px;
   grid-template-columns: auto 20px;
-  grid-template-areas:
-    "avatar burger-menu"
-    "content burger-menu"
-    "icons bookmark";
   gap: 1.5rem;
 }
 
 .avatar {
-  grid-area: avatar;
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -38,13 +37,23 @@
 }
 
 .post__text {
-  grid-area: content;
+  grid-row: 2 / 3;
+  grid-column: 1 / 2;
   line-height: 24px;
-  font-weight: 400;
+  font-weight: 200;
+}
+
+.post__image {
+  display: inline-block;
+  width: 100%;
+  height: auto;
+  border-radius: 16px;
+  grid-column: 1 / 3;
 }
 
 .post__icons {
-  grid-area: icons;
+  grid-row: 3 / 4;
+  grid-column: 1 / 2;
   font-size: 0.75rem;
 }
 
@@ -79,5 +88,5 @@
 
 .post__bookmark {
   margin-right: 0.5rem;
-  grid-area: bookmark;
+  grid-row: 3 / 4;
 }
