--- a/styles/index.css
+++ b/styles/index.css
@@ -10,3 +10,4 @@
 @import "/styles/components/footer.css";
 @import "/styles/components/header.css";
 @import "/styles/components/main.css";
+@import "/styles/components/profile.css";
