--- a/styles/components/post.css
+++ b/styles/components/post.css
@@ -3,7 +3,7 @@
   border-top: 1px solid var(--color-secondary-dark-grey);
   padding: 1rem 1.5rem;
   display: grid;
-  width: 375px;
+  width: 100%;
   grid-template-rows: 34px auto 20px;
   grid-template-columns: auto 20px;
   gap: 1.5rem;
