--- a/styles/components/post.css
+++ b/styles/components/post.css
@@ -51,6 +51,13 @@
   grid-column: 1 / 3;
 }
 
+.post__slider {
+  overflow: auto;
+  white-space: nowrap;
+  display: block;
+  grid-column: 1 / 3;
+}
+
 .post__icons {
   grid-row: 3 / 4;
   grid-column: 1 / 2;
