--- a/styles/components/post.css
+++ b/styles/components/post.css
@@ -9,6 +9,16 @@
   gap: 1.5rem;
 }
 
+.post-no-topline {
+  border-bottom: 1px solid var(--color-secondary-dark-grey);
+  padding: 1rem 1.5rem;
+  display: grid;
+  width: 375px;
+  grid-template-rows: 34px auto 20px;
+  grid-template-columns: auto 20px;
+  gap: 1.5rem;
+}
+
 .avatar {
   grid-row: 1 / 2;
   grid-column: 1 / 2;
