--- a/styles/components/search.css
+++ b/styles/components/search.css
@@ -2,9 +2,11 @@
   background-color: #323436;
   border-radius: 30px;
   padding: 12px 16px;
-  font-family: helvetica;
   outline: none;
   color: white;
+  border: none;
+  font-weight: 100;
+  font-size: small;
 }
 
 .search__button {
@@ -44,4 +46,25 @@
 
 .search__tag:first-child {
   margin-left: 20px;
+}
+
+.search__tag--color-primary-social-blue {
+  background-color: #2e8af6;
+  border: none;
+}
+
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: white;
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: white;
+}
+
+::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: white;
 }
