--- a/styles/index.css
+++ b/styles/index.css
@@ -4,10 +4,10 @@
 @import "/styles/utility.css";
 @import "/styles/reset.css";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import "/styles/search.css";
 
 /* COMPONENTS */
 @import "/styles/components/post.css";
 @import "/styles/components/footer.css";
 @import "/styles/components/header.css";
 @import "/styles/components/main.css";
+@import "/styles/components/search.css";
