--- a/styles/index.css
+++ b/styles/index.css
@@ -11,3 +11,4 @@
 @import "/styles/components/header.css";
 @import "/styles/components/main.css";
 @import "/styles/components/search.css";
+@import "/styles/components/newsfeed.css";
