Start alert page

--- a/styles/index.css
+++ b/styles/index.css
@@ -12,3 +12,4 @@
 @import "/styles/components/main.css";
 @import "/styles/components/search.css";
 @import "/styles/components/newsfeed.css";
+@import "/styles/components/alerts.css";
