--- a/styles/utility.css
+++ b/styles/utility.css
@@ -47,3 +47,12 @@
   clip: rect(0, 0, 0, 0);
   border: 0;
 }
+
+.p-0 {
+  padding: 0;
+}
+
+.grayfilter {
+  filter: grayscale(50%);
+  color: var(--color-secondary-lighter-grey);
+}
