Second last stage

--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -1,6 +1,8 @@
 .footer {
   background-color: var(--color-pure-black);
-  border: 1px solid white;
+  border-top: 2px solid var(--color-secondary-dark-grey);
+  position: sticky;
+  bottom: 0;
 }
 
 .navigation {
