--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -4,6 +4,26 @@
   align-items: center;
 }
 
+.header--profile {
+  position: relative;
+  justify-content: center;
+  flex-direction: column;
+  row-gap: 15px;
+  align-items: flex-end;
+  background-image: url(https://source.unsplash.com/750x320/?painting);
+  background-size: cover;
+}
+
+.header--profile::before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
 .icon-container {
   display: flex;
   border: 1px solid var(--color-secondary-lighter-grey);
@@ -15,6 +35,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  background-color: var(--color-background);
 }
 
 .icon-container__icon {
