--- a/styles/utility.css
+++ b/styles/utility.css
@@ -14,6 +14,13 @@
   color: var(--color-primary-social-blue);
 }
 
+.text--underline {
+  text-decoration: underline;
+  text-decoration-color: var(--color-primary-social-blue);
+  text-underline-offset: 10px;
+  text-decoration-thickness: 3px;
+}
+
 .mr-1rem {
   margin-right: 1rem;
 }
