--- a/styles/components/profile.css
+++ b/styles/components/profile.css
@@ -5,7 +5,7 @@
 
 .img-profile {
   display: block;
-  height: 180px;
+  max-height: 180px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 25px;
