update navigation to anchors
Co-authored-by: ronnyleibham <ronnyleibham@users.noreply.github.com>

--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -15,8 +15,16 @@
   color: var(--color-secondary-lighter-grey);
 }
 
+.fa:hover {
+  color: white;
+}
+
 .navigation__icon--plus {
   background: var(--color-primary-gradient);
   padding: 1rem;
   border-radius: 50%;
+}
+
+.navigation__list {
+  list-style: none;
 }
