--- a/styles/utility.css
+++ b/styles/utility.css
@@ -13,6 +13,9 @@
 .text--blue {
   color: var(--color-primary-social-blue);
 }
+.text--white {
+  color: var(--color-primary-white);
+}
 
 .text--underline {
   text-decoration: underline;
