--- a/styles/index.css
+++ b/styles/index.css
@@ -14,3 +14,4 @@
 @import "/styles/components/search.css";
 @import "/styles/components/newsfeed.css";
 @import "/styles/components/alerts.css";
+@import "/styles/components/post-View.css";
