--- a/styles/utility.css
+++ b/styles/utility.css
@@ -37,6 +37,10 @@
   padding: 0 1.5rem;
 }
 
+.align-self-center {
+  align-self: center;
+}
+
 .fw-500 {
   font-weight: 500;
 }
@@ -63,4 +67,9 @@
 .grayfilter {
   filter: grayscale(50%);
   color: var(--color-secondary-lighter-grey);
+}
+
+.center-xy-grid {
+  justify-self: center;
+  align-self: center;
 }
