BEM for home.html

--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -34,7 +34,7 @@
   text-align: center;
 }
 
-.icon-container {
+.header__icon-container {
   display: flex;
   border: 1px solid var(--color-secondary-lighter-grey);
   padding: 0.5rem;
@@ -48,11 +48,11 @@
   background-color: var(--color-background);
 }
 
-.icon-container__icon {
+.header__icon {
   display: inline-block;
 }
 
-.icon-container__badge {
+.header__badge {
   position: absolute;
   bottom: 1rem;
   left: 1.25rem;
